image updates for external/PDAP links/new compare

--- a/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
@@ -289,7 +289,7 @@ else if (Model.PageEdit)
         <form method="post">
             <div class="col-md-12">
                 <div class="col-md-9">
-                    <button class="btn btn-primary pull-left" asp-all-route-data="routedataclear" asp-page-handler="clear" formmethod="post">&nbsp;&nbsp;&nbsp;&nbsp;@Localizer["Clear List"]&nbsp;&nbsp;&nbsp;&nbsp;</button>
+                    <button class="btn btn-primary pull-left" asp-all-route-data="routedataclear" asp-page-handler="clear" formmethod="post">&nbsp;&nbsp;&nbsp;&nbsp;@Localizer["Refresh"]&nbsp;&nbsp;&nbsp;&nbsp;</button>
                 </div>
                 <div class="col-md-3">
                     <a class="btn btn-primary mrgn-rght-md pull-right" type="button" asp-all-route-data="routedatanext" asp-page="SimilarSearch">&nbsp;&nbsp;&nbsp;&nbsp;@Localizer["Submit"]&nbsp;&nbsp;&nbsp;&nbsp;</a>
