--- a/Web/Pages/Student/College/Electronics.cshtml
+++ b/Web/Pages/Student/College/Electronics.cshtml
@@ -3,6 +3,9 @@
 @inject IViewLocalizer Localizer
 @{
     var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
+    var pdapText = string.Empty;
+    var pdapUrl = Localizer["MELDEVUrl"];
+    var space = string.Empty;
 }
 
     <div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
@@ -30,7 +33,6 @@
                     {"previouspage", "../../../Student/College/Electronics" },
                     { "positionid",  position.JobTitleId.ToString()},
                  };
-
                     <tr>
                         <td>@position.JobGroupCode-@position.JobLevelValue</td>
                         <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
@@ -70,12 +72,16 @@
                     {"previouspage", "../../Student/College/Electronics" },
                     { "positionid",  position.JobTitleId.ToString()},
                  };
-
-                    <tr>
-                        <td>@position.JobGroupCode-@position.JobLevelValue</td>
-                        <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
-                        <td><a asp-page="../../Candidate/Shoreside/SimilarDetails" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
-                    </tr>
+                    if (position.JobGroupId == 23)
+                    {
+                        pdapText = Localizer["PDAPText"].Value;
+                        space = " - ";
+                    }
+            <tr>
+                <td>@position.JobGroupCode-@position.JobLevelValue</td>
+                <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)@space<a href=@pdapUrl>@pdapText</a></td>
+                <td><a asp-page="../../Candidate/Shoreside/SimilarDetails" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
+            </tr>
                 }
             }
             else
