--- a/Web/Pages/Candidate/Seagoing/Common/Details.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Common/Details.cshtml
@@ -36,7 +36,7 @@
                     {
                         <tr>
                             <th style="background-color:#f2f2f2">@Localizer["CERTIFICATIONS"]</th>
-                            <th style="background-color:#f2f2f2" class="text-center">@Localizer["SELECT"]</th>
+                            <th style="background-color:#f2f2f2" class="text-center">@Localizer["SAME CERTIFICATION"]</th>
                         </tr>
                         @foreach (var c in Model.PositionCertificates)
                         {
