--- a/Web/Pages/Candidate/Seagoing/Officer/Index.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Officer/Index.cshtml
@@ -3,9 +3,15 @@
 
     <section role="contentinfo">
         <div class="col-md-12">
+
             <h2>@Localizer["Q1"]</h2>
+
+            <div class="col-sm-10 col-sm-offset-1 well text-center ">
+                <p>@Localizer["Text"]</p>
+                <p>@Localizer["Details"]<a rel="external" target="_blank" href="@Localizer["Link"]">@Localizer["Link"]</a></p>
+            </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <figure>
                         <a class="nav-link" asp-page="Navigation/PositionList">
                             <img src="~/img/CCGMember/Officer-Nav.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
@@ -13,10 +19,10 @@
                         <figcaption><h4 class="text-center">@Localizer["Nav"]</h4></figcaption>
                     </figure>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <figure>
                         <a asp-page="Engineering/PositionList">
-                            <img src="~/img/CCGMember/Officer-Eng.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                            <img src="~/img/Candidate/Officer Chief Engineer.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
                         <figcaption><h4 class="text-center">@Localizer["Eng"]</h4></figcaption>
                     </figure>
