--- a/Web/Pages/CCGMember/SearchType.cshtml
+++ b/Web/Pages/CCGMember/SearchType.cshtml
@@ -25,7 +25,7 @@
     <div class="col-sm-6 mrgn-bttm-md">
         <figure>
             <img src="~/img/CCGMember/similar.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
-            <strong>@Localizer["Similar"]</strong>
+            <h4>@Localizer["Similar"]</h4>
         </figure>
     </div>
 </a>
@@ -33,7 +33,7 @@
     <div class="col-sm-6 mrgn-bttm-md">
         <figure>
             <img src="~/img/CCGMember/compare.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
-            <strong>@Localizer["Compare"]</strong>
+            <h4>@Localizer["Compare"]</h4>
         </figure>
     </div>
 </a>
