table fixes/similar search update

--- a/Web/Pages/CCGMember/Details.cshtml
+++ b/Web/Pages/CCGMember/Details.cshtml
@@ -33,7 +33,7 @@
                     {
                         var key = "c" + c.Id.ToString();
                         <tr>
-                            <td>
+                            <td colspan="2">
                                 <a href="#@key" aria-controls="centred-popup" class="wb-lbx" role="button">
                                     @(isEnglish ? c.NameEng : c.NameFre)
                                 </a>
