Updating images in Student section

--- a/Web/Pages/Student/College/AllPositions.cshtml
+++ b/Web/Pages/Student/College/AllPositions.cshtml
@@ -24,7 +24,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a asp-page="Administrative">
-                        <img src="~/img/CCGMember/AS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/Admin.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption class="text-center"><h5>@Localizer["admin"]</h5></figcaption>
                 </div>
