--- a/Web/Pages/Student/HighSchool/AllPositions.cshtml
+++ b/Web/Pages/Student/HighSchool/AllPositions.cshtml
@@ -24,7 +24,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a asp-page="Administrative">
-                        <img src="~/img/CCGMember/AS.jpg" alt="Photo of" class="img-responsive" />
+                        <img src="~/img/CCGMember/Admin.jpg" alt="Photo of" class="img-responsive" />
                     </a>
                 </div>
                 <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="HS_Admin_List">@Localizer["admin"]</a></h4></figcaption>
@@ -35,7 +35,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a asp-page="Computer">
-                        <img src="~/img/CCGMember/RO.jpg" alt="Photo of" class="img-responsive" />
+                        <img src="~/img/CCGMember/CS.jpg" alt="Photo of" class="img-responsive" />
                     </a>
                 </div>
                 <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="HS_Computer_List">@Localizer["computer"]</a></h4></figcaption>
