--- a/Web/Pages/Student/Highschool.cshtml
+++ b/Web/Pages/Student/Highschool.cshtml
@@ -20,7 +20,7 @@
     <div class="col-sm-4 mrgn-tp-md">
         <figure>
             <a href="Student_List">
-                <img src="~/img/CCGMember/AS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                <img src="~/img/CCGMember/Admin.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
             </a>
             <figcaption class="text-center"><h5>@Localizer["admin"]</h5></figcaption>
         </figure>
@@ -29,7 +29,7 @@
     <div class="col-sm-4 mrgn-tp-md">
         <figure>
             <a href="Student_List">
-                <img src="~/img/CCGMember/RO.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                <img src="~/img/CCGMember/CS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
             </a>
             <figcaption class="text-center"><h5>@Localizer["computer"]</h5></figcaption>
         </figure>
