Updating images with descriptions

--- a/Web/Pages/Candidate/Seagoing/Crew/Index.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Crew/Index.cshtml
@@ -9,7 +9,7 @@
                 <div class="col-sm-4">
                     <figure>
                         <a class="nav-link" asp-page="Deck/PositionList">
-                            <img src="~/img/CCGMember/SC.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                            <img src="~/img/CCGMember/SC.jpg" alt="@Localizer["PhotoDeck"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
                         <figcaption><h4 class="text-center">@Localizer["Deck"]</h4></figcaption>
                     </figure>
@@ -17,7 +17,7 @@
                 <div class="col-sm-4">
                     <figure>
                         <a asp-page="Engineering/PositionList">
-                            <img src="~/img/CCGMember/Oiler.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                            <img src="~/img/CCGMember/Oiler.jpg" alt="@Localizer["PhotoEngineer"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
                         <figcaption><h4 class="text-center">@Localizer["Engineering"]</h4></figcaption>
                     </figure>
@@ -25,7 +25,7 @@
                 <div class="col-sm-4">
                     <figure>
                         <a asp-page="Logistics/PositionList">
-                            <img src="~/img/CCGMember/GS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                            <img src="~/img/CCGMember/GS.jpg" alt="@Localizer["PhotoLogistics"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
                         <figcaption><h4 class="text-center">@Localizer["Logistics"]</h4></figcaption>
                     </figure>
