--- a/Web/Pages/Candidate/Seagoing/Index.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Index.cshtml
@@ -9,7 +9,7 @@
                 <div class="col-sm-6">
                     <figure>
                         <a class="nav-link" asp-page="Officer/Index">
-                            <img src="~/img/CCGMember/SO.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                            <img src="~/img/CCGMember/SO.jpg" alt="@Localizer["PhotoOfficer"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
                         <figcaption><h4 class="text-center">@Localizer["Officer"]</h4></figcaption>
                     </figure>
@@ -17,7 +17,7 @@
                 <div class="col-sm-6">
                     <figure>
                         <a asp-page="Crew/Index">
-                            <img src="~/img/CCGMember/SC.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                            <img src="~/img/CCGMember/SC.jpg" alt="@Localizer["PhotoCrew"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
                         <figcaption><h4 class="text-center">@Localizer["Crew"]</h4></figcaption>
                     </figure>
