--- a/Web/Pages/Candidate/Seagoing/Officer/Index.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Officer/Index.cshtml
@@ -14,7 +14,7 @@
                 <div class="col-sm-6">
                     <figure>
                         <a class="nav-link" asp-page="Navigation/PositionList">
-                            <img src="~/img/CCGMember/Officer-Nav.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                            <img src="~/img/CCGMember/Officer-Nav.jpg" alt="@Localizer["PhotoNav"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
                         <figcaption><h4 class="text-center">@Localizer["Nav"]</h4></figcaption>
                     </figure>
@@ -22,7 +22,7 @@
                 <div class="col-sm-6">
                     <figure>
                         <a asp-page="Engineering/PositionList">
-                            <img src="~/img/Candidate/Officer Chief Engineer.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                            <img src="~/img/Candidate/Officer Chief Engineer.jpg" alt="@Localizer["PhotoEng"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
                         <figcaption><h4 class="text-center">@Localizer["Eng"]</h4></figcaption>
                     </figure>
