--- a/Web/Pages/Student/College/AllPositions.cshtml
+++ b/Web/Pages/Student/College/AllPositions.cshtml
@@ -13,7 +13,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a href="@Localizer["link"]" target="_blank">
-                        <img src="~/img/Student/CCGCollege.jpg" alt="Photo of" class="img-responsive" />
+                        <img src="~/img/Student/CCGCollege.jpg" alt="@Localizer["PhotoCollege"]" class="img-responsive" />
                     </a>
                 </div>
                 <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="@Localizer["link"]" target="_blank">@Localizer["ccgcollege"]</a></h4></figcaption>
@@ -24,7 +24,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a asp-page="Administrative">
-                        <img src="~/img/CCGMember/Admin.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/Admin.jpg" alt="@Localizer["PhotoAdmin"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption class="text-center"><h5>@Localizer["admin"]</h5></figcaption>
                 </div>
@@ -34,7 +34,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a asp-page="Computer">
-                        <img src="~/img/CCGMember/CS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/CS.jpg" alt="@Localizer["PhotoComputer"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption class="text-center"><h5>@Localizer["computer"]</h5></figcaption>
                     </div>
@@ -44,7 +44,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a asp-page="Cook">
-                        <img src="~/img/CCGMember/GS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/GS.jpg" alt="@Localizer["PhotoCook"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption class="text-center"><h5>@Localizer["cook"]</h5></figcaption>
                 </div>
@@ -53,7 +53,7 @@
         <div class="col-lg-4 col-sm-6">
             <figure>
                 <a asp-page="Electrical">
-                    <img src="~/img/CCGMember/GT.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    <img src="~/img/CCGMember/GT.jpg" alt="@Localizer["PhotoElectrical"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                 </a>
                 <figcaption class="text-center"><h5>@Localizer["electrical"]</h5></figcaption>
             </figure>
@@ -62,7 +62,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a asp-page="Electronics">
-                        <img src="~/img/CCGMember/EL.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/EL.jpg" alt="@Localizer["PhotoElectronics"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption class="text-center"><h5>@Localizer["electronics"]</h5></figcaption>
                 </div>
@@ -72,7 +72,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a asp-page="GeographicalInformation">
-                        <img src="~/img/Student/geo.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/Student/geo.jpg" alt="@Localizer["PhotoGeo"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption class="text-center"><h5>@Localizer["geo"]</h5></figcaption>
                    </div>
@@ -82,7 +82,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a asp-page="NauticalDeck">
-                        <img src="~/img/CCGMember/SC.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/SC.jpg" alt="@Localizer["PhotoDeck"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption class="text-center"><h5>@Localizer["deck"]</h5></figcaption>
                   </div>
@@ -92,7 +92,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a asp-page="NauticalEngineering">
-                        <img src="~/img/Student/Marine Engineer - College CCT.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/Student/Marine Engineer - College CCT.jpg" alt="@Localizer["PhotoEngineer"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption class="text-center"><h5>@Localizer["engineering"]</h5></figcaption>
                </div>
@@ -102,7 +102,7 @@
             <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
                 <div class="img-container">
                     <a class="nav-link" asp-page="Trades">
-                        <img src="~/img/CCGMember/GL.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/CCGMember/GL.jpg" alt="@Localizer["PhotoTrades"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption class="text-center"><h5>@Localizer["trades"]</h5></figcaption>
                  </div>
