--- a/Web/Pages/Candidate/Index.cshtml
+++ b/Web/Pages/Candidate/Index.cshtml
@@ -8,7 +8,7 @@
                 <div class="col-sm-6">
                     <figure>
                         <a class="nav-link" asp-page="Shoreside/AllCandidateShoreside">
-                            <img src="~/img/Candidate/shoreside.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                            <img src="~/img/Candidate/shoreside.jpg" alt="@Localizer["PhotoShoreside"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
                         <figcaption><h4 class="text-center">@Localizer["Shoreside"]</h4></figcaption>
                     </figure>
@@ -16,7 +16,7 @@
                 <div class="col-sm-6">
                     <figure>
                         <a asp-page="Seagoing/Index">
-                            <img src="~/img/Candidate/Seagoing.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                            <img src="~/img/Candidate/Seagoing.jpg" alt="@Localizer["PhotoSeagoing"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
                         <figcaption><h4 class="text-center">@Localizer["Seagoing"]</h4></figcaption>
                     </figure>
