--- a/Web/Pages/Index.cshtml
+++ b/Web/Pages/Index.cshtml
@@ -14,19 +14,19 @@
     <div class="row">
         <a asp-page="CCGMember/AllPositions">
             <div class="col-md-4">
-                <img src="~/img/CCG-employee.png" class="img-responsive" />
+                <img src="~/img/CCG-employee.png" alt="@Localizer["PhotoMember"]" class="img-responsive" />
                 <h3 style="text-align:center">@Localizer["CCGMember"]</h3>
             </div>
         </a>
         <a asp-page="Candidate/Index">
             <div class="col-md-4">
-                <img src="~/img/external candidates.png" class="img-responsive" />
+                <img src="~/img/external candidates.png" alt="@Localizer["PhotoExternal"]" class="img-responsive" />
                 <h3 style="text-align:center">@Localizer["ExternalCandidate"]</h3>
             </div>
         </a>
         <a asp-page="Student/Index">
             <div class="col-md-4">
-                <img src="~/img/Students.png" class="img-responsive" />
+                <img src="~/img/Students.png" alt="@Localizer["PhotoStudents"]" class="img-responsive" />
                 <h3 style="text-align:center">@Localizer["Student"]</h3>
             </div>
         </a>
