--- a/Web/Pages/Student/Index.cshtml
+++ b/Web/Pages/Student/Index.cshtml
@@ -12,7 +12,7 @@
             <div class="col-sm-4">
                 <figure>
                     <a class="nav-link" asp-page="HighSchool/AllPositions">
-                        <img src="~/img/Student/Highschool.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/Student/Highschool.jpg" alt="@Localizer["PhotoHS"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["HighSchool"]</h4></figcaption>
                 </figure>
@@ -20,7 +20,7 @@
             <div class="col-sm-4">
                 <figure>
                     <a asp-page="College/AllPositions">
-                        <img src="~/img/Student/TechCollege.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/Student/TechCollege.jpg" alt="@Localizer["PhotoTC"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["TechCollege"]</h4></figcaption>
                 </figure>
@@ -28,7 +28,7 @@
             <div class="col-sm-4">
                 <figure>
                     <a asp-page="University/AllPositions">
-                        <img src="~/img/Student/University.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                        <img src="~/img/Student/University.jpg" alt="@Localizer["PhotoU"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
                     <figcaption><h4 class="text-center">@Localizer["University"]</h4></figcaption>
                 </figure>
