--- a/Web/Pages/CCGMember/SearchType.cshtml
+++ b/Web/Pages/CCGMember/SearchType.cshtml
@@ -24,7 +24,7 @@
 <a asp-page="Similar/SimilarSearch" asp-all-route-data="@paramdata">
     <div class="col-sm-6 mrgn-bttm-md">
         <figure>
-            <img src="~/img/CCGMember/similar.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+            <img src="~/img/CCGMember/similar.jpg" alt="@Localizer["PhotoSimilar"]" class="img-responsive thumbnail mrgn-bttm-sm" />
             <h4>@Localizer["Similar"]</h4>
         </figure>
     </div>
@@ -32,7 +32,7 @@
 <a asp-page="Compare/AllObjective" asp-all-route-data="@paramdata">
     <div class="col-sm-6 mrgn-bttm-md">
         <figure>
-            <img src="~/img/CCGMember/compare.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+            <img src="~/img/CCGMember/compare.jpg" alt="@Localizer["PhotoCompare"]" class="img-responsive thumbnail mrgn-bttm-sm" />
             <h4>@Localizer["Compare"]</h4>
         </figure>
     </div>
