--- a/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
+++ b/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
@@ -22,12 +22,12 @@
         {"objectiveid",  Model.ObjectivePosition?.JobTitleId.ToString()}
         };
 
-<a class="btn btn-primary pull-right" role="button" asp-page="Delta" asp-all-route-data="routedatanext">@Localizer["Compare"]</a>
+<a class="btn btn-primary pull-right mrgn-tp-sm" role="button" asp-page="Delta" asp-all-route-data="routedatanext">@Localizer["Compare"]</a>
 }
 <h2><b>@Localizer["h2Text"]</b></h2>
 <h3><b>@(isEnglish ? Model.JobGroup.NameEng : Model.JobGroup.NameFre) (@Model.JobGroup.Code)</b></h3>
 <div class="dropdown">
-    <div class="col-sm-3">
+    <div class="col-sm-3 mrgn-bttm-md">
         <label><b>@Localizer["Level"]</b></label><br />
         <button class="dropdown-toggle" width="100%" id="menu1" type="button" data-toggle="dropdown">
             @Model.JobGroup.Code @Model.LevelObj &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -53,7 +53,7 @@
             }
         </ul>
     </div>
-    <div class="col-sm-9">
+    <div class="col-sm-9 mrgn-bttm-md">
         <label><b>@Localizer["Position"]</b></label><br />
         <button class="dropdown-toggle" id="menu1" type="button" data-toggle="dropdown">
             @(Model.ObjectiveId==null ? Localizer["Select Position"].Value : (isEnglish ? Model.ObjectivePosition.JobTitleEng : Model.ObjectivePosition.JobTitleFre))
@@ -79,7 +79,7 @@
         </ul>
     </div>
 </div>
-<figure><img src="~/img/CCGMember/Positions-full.jpg" alt="Photo of " class="img-responsive thumbnail mrgn-bttm-sm" /> </figure>
+<figure><img src="~/img/CCGMember/Positions-full.jpg" alt="@Localizer["Photo"]" class="img-responsive thumbnail mrgn-tp-sm mrgn-bttm-sm" /> </figure>
 <div class="row mrgn-tp-lg">
     <div class="col-sm-9 pull-right mrgn-tp-lg">
         @{var routedataprevious = new Dictionary<string, string>
