--- a/Web/Pages/Shared/_ThemeGcwu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwu.cshtml
@@ -23,13 +23,13 @@
 <head>
     <meta charset="utf-8">
     <title>
-        @ViewData["Title"] - CCG CCT
+        @ViewData["Title"] - CCG/GCC
     </title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
-    <meta name="description" content="Web Experience Toolkit (WET) includes reusable components for building and maintaining innovative Web sites that are accessible, usable, and interoperable. These reusable components are open source software and free for use by departments and external Web communities">
-    <meta name="dcterms.title" content="Content page - Web Experience Toolkit">
-    <meta name="dcterms.creator" content="French name of the content author / Nom en français de l'auteur du contenu">
+    <meta name="description" content="The Career Competency Tool is a tool designed to allow you to search and compare various positions within the Canadian Coast Guard.">
+    <meta name="dcterms.title" content="Homepage - Career Competency Tool">
+    <meta name="dcterms.creator" content="Canadian Coast Guard / Garde côtière canadienne">
     <meta name="dcterms.issued" title="W3CDTF" content="Date published (YYYY-MM-DD) / Date de publication (AAAA-MM-JJ)">
     <meta name="dcterms.modified" title="W3CDTF" content="Date modified (YYYY-MM-DD) / Date de modification (AAAA-MM-JJ)">
     <meta name="dcterms.subject" title="scheme" content="French subject terms / Termes de sujet en français">
